- Add disable_on_update_column setting to column to allow skipping disabling the form when a column changes and a request is sent to refresh other fields
- Rename active_scaffold_habtm_joins to active_scaffold_joins, active_scaffold_habtm_joins is now deprecated
- Support sorted_association_options_find with model name prefix

= 4.0.13
- Fix security_methods on destroy_existing

= 4.0.12.2
- Filter includes for the selected model in select form_ui when column is a polymorphic association, as includes for polymorphic association may be a hash with the polymorphic association as key and associations of different models in the value

= 4.0.11
- Fix refresh_link with update_columns

= 4.0.10
- Fix override_columns without block

= 4.0.9
- Fix comparing column with ProxyColumn, fixing sorts_on? when the column is overrided

= 4.0.8
- Fix date_picker with format option

= 4.0.7
- Fix tableless in rails 7.2

= 4.0.6
- Fix :select form_ui on column using SQL in sort_by, such as 'table.user_id IS NULL'

= 4.0.5
- Fix if ActiveScaffold::Actions::Nested::ChildMethods is included manually after AS config block

= 4.0.4.2
- Support show key in helpers for search date/datetime, to change default condition to render it hidden

= 4.0.3
- Fix for jQuery 3
- Fix position popup for collection action links
- Fix recordselect in form open with position popup
- Fix class of subform on optional subform using add_new option with layout option
- Fix constraints with mulitple ids for belongs_to associations with primary_key setting
- Fix render_field when a column changes, and a column to refresh exists in a subform with the same name too

= 4.0.2
- Fix using update_columns in field search with search UI submitting a hash, such as date fields
- Support disabling update_columsns on field_search

= 4.0.1
- Add :text_editor show_ui, to avoid escaping html code
- Fix action link on association column named record

= 4.0.0